--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -28,10 +28,20 @@ steps:
     contents: |
       Modules/**
       MonitorAlert/**
+      PostMessageToSlack/**
       host.json
       profile.ps1
       requirements.psd1
       proxies.json
+    targetFolder: '$(Build.SourcesDirectory)/MonitorAlertZip'
+
+    
+- task: CopyFiles@2
+  displayName: 'Copy Function files'
+  inputs:
+    sourceFolder: '$(Build.SourcesDirectory)/PostMessageToSlack'
+    contents: |
+      PostMessageToSlack/**
     targetFolder: '$(Build.SourcesDirectory)/MonitorAlertZip'
 
 - task: ArchiveFiles@2
@@ -40,27 +50,3 @@ steps:
     includeRootFolder: false
     archiveType: zip 
     archiveFile: '$(Build.ArtifactStagingDirectory)/slack_azure_function.zip' 
-
-- task: CopyFiles@2
-  displayName: 'Copy Function files'
-  inputs:
-    sourceFolder: '$(Build.SourcesDirectory)/PostMessageToSlack'
-    contents: |
-      PostMessageToSlack/**
-      host.json
-      profile.ps1
-      requirements.psd1
-    targetFolder: '$(Build.SourcesDirectory)/PostMessageToSlackZip'
-   
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(Build.SourcesDirectory)/PostMessageToSlackZip'
-    includeRootFolder: false
-    archiveType: zip 
-    archiveFile: '$(Build.ArtifactStagingDirectory)/PostMessageToSlackZip.zip' 
-   
-- task: PublishBuildArtifacts@1
-  displayName: Publish Artifact
-  inputs:
-    pathtoPublish: $(Build.ArtifactStagingDirectory)
-    artifactName: Mon.AzureMonitorToSlack
