--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -50,6 +50,7 @@ steps:
     contents: |
       Modules/**
       PayStackAlert/**
+      requirements.psd1
     targetFolder: '$(Build.SourcesDirectory)/MonitorAlertZip'
 
 - task: ArchiveFiles@2
